Checkstyle fixes second round (#3981)